AUTOMAKE_OPTIONS=foreign
sbin_PROGRAMS     = cronolog
noinst_PROGRAMS   = cronotest
AM_CPPFLAGS=-I$(top_srcdir)/src/cronolog/include/
cronolog_SOURCES  = getopt.c getopt1.c cronolog.c  cronoutils.c 
cronotest_SOURCES = getopt.c getopt1.c cronotest.c cronoutils.c 
EXTRA_DIST  =   $(top_srcdir)/src/cronolog/include/*


