AUTOMAKE_OPTIONS=foreign
AM_CPPFLAGS= -I $(top_srcdir)/include/ -I $(top_srcdir)/src/mbedtls/include/
lib_LTLIBRARIES=libmbedtls.la
noinst_HEADERS=\
    include/aesni.h\
    include/bignum_internal.h\
    include/bn_mul.h\
    include/check_crypto_config.h\
    include/cipher_wrap.h\
    include/common.h\
    include/constant_time_internal.h\
    include/constant_time_invasive.h\
    include/ecp_internal_alt.h\
    include/ecp_invasive.h\
    include/entropy_poll.h\
    include/md_wrap.h\
    include/mps_common.h\
    include/mps_error.h\
    include/mps_reader.h\
    include/mps_trace.h\
    include/padlock.h\
    include/pk_wrap.h\
    include/pkwrite.h\
    include/psa_crypto_aead.h\
    include/psa_crypto_cipher.h\
    include/psa_crypto_core.h\
    include/psa_crypto_driver_wrappers.h\
    include/psa_crypto_ecp.h\
    include/psa_crypto_hash.h\
    include/psa_crypto_invasive.h\
    include/psa_crypto_its.h\
    include/psa_crypto_mac.h\
    include/psa_crypto_random_impl.h\
    include/psa_crypto_rsa.h\
    include/psa_crypto_se.h\
    include/psa_crypto_slot_management.h\
    include/psa_crypto_storage.h\
    include/rsa_alt_helpers.h\
    include/ssl_client.h\
    include/ssl_debug_helpers.h\
    include/ssl_misc.h\
    include/ssl_tls13_invasive.h\
    include/ssl_tls13_keys.h
libmbedtls_la_SOURCES=\
    aes.c\
    aesni.c\
    aria.c\
    asn1parse.c\
    asn1write.c\
    base64.c\
    bignum.c\
    camellia.c\
    ccm.c\
    chacha20.c\
    chachapoly.c\
    cipher.c\
    cipher_wrap.c\
    cmac.c\
    constant_time.c\
    ctr_drbg.c\
    debug.c\
    des.c\
    dhm.c\
    ecdh.c\
    ecdsa.c\
    ecjpake.c\
    ecp.c\
    ecp_curves.c\
    entropy.c\
    entropy_poll.c\
    error.c\
    gcm.c\
    hkdf.c\
    hmac_drbg.c\
    md5.c\
    md.c\
    memory_buffer_alloc.c\
    mps_reader.c\
    mps_trace.c\
    net_sockets.c\
    nist_kw.c\
    oid.c\
    padlock.c\
    pem.c\
    pk.c\
    pkcs12.c\
    pkcs5.c\
    pkparse.c\
    pk_wrap.c\
    pkwrite.c\
    platform.c\
    platform_util.c\
    poly1305.c\
    psa_crypto_aead.c\
    psa_crypto.c\
    psa_crypto_cipher.c\
    psa_crypto_client.c\
    psa_crypto_driver_wrappers.c\
    psa_crypto_ecp.c\
    psa_crypto_hash.c\
    psa_crypto_mac.c\
    psa_crypto_rsa.c\
    psa_crypto_se.c\
    psa_crypto_slot_management.c\
    psa_crypto_storage.c\
    psa_its_file.c\
    ripemd160.c\
    rsa_alt_helpers.c\
    rsa.c\
    sha1.c\
    sha256.c\
    sha512.c\
    ssl_cache.c\
    ssl_ciphersuites.c\
    ssl_client.c\
    ssl_cookie.c\
    ssl_debug_helpers_generated.c\
    ssl_msg.c\
    ssl_ticket.c\
    ssl_tls12_client.c\
    ssl_tls12_server.c\
    ssl_tls13_client.c\
    ssl_tls13_generic.c\
    ssl_tls13_keys.c\
    ssl_tls13_server.c\
    ssl_tls.c\
    threading.c\
    timing.c\
    version.c\
    version_features.c\
    x509.c\
    x509_create.c\
    x509_crl.c\
    x509_crt.c\
    x509_csr.c\
    x509write_crt.c\
    x509write_csr.c